--- a/packages/xmpp.js/package.json
+++ b/packages/xmpp.js/package.json
@@ -38,6 +38,7 @@
     "@xmpp/sasl-anonymous": "^0.12.0",
     "@xmpp/sasl-plain": "^0.12.0",
     "@xmpp/sasl-scram-sha-1": "^0.12.0",
+    "@xmpp/sasl-x-oauth2": "^0.12.0",
     "@xmpp/session-establishment": "^0.12.0",
     "@xmpp/starttls": "^0.12.0",
     "@xmpp/stream-features": "^0.12.0",
